CMP - Dropdown: Commented out hover state style for now to fix text shifting in select element

--- a/src/component/base/dropdown/style.scss
+++ b/src/component/base/dropdown/style.scss
@@ -19,9 +19,9 @@
             }
         }
 
-        &:not(:disabled):hover {
-            cursor: pointer;
-        }
+        // &:not(:disabled):hover {
+        //     cursor: pointer;
+        // }
     }
 
     option {
